<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mult_603.seniordesignprojectcordiusmotus.ChangePasswordActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/change_password"
        android:id="@+id/change_password"
        android:textAlignment="center"
        android:textSize="32dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/change_password_message"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_below="@id/change_password"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:id="@+id/change_password_message" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/change_password_email"
        android:layout_below="@+id/change_password_message"
        android:layout_alignLeft="@+id/old_password"
        android:layout_alignStart="@+id/old_password"
        android:layout_alignRight="@+id/old_password"
        android:layout_alignEnd="@+id/old_password"
        android:hint="@string/email_hint"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/old_password"
        android:hint="@string/old_password_hint"
        android:textColorHint="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_alignLeft="@+id/change_password_message"
        android:layout_alignStart="@+id/change_password_message"
        android:layout_alignRight="@+id/change_password_message"
        android:layout_alignEnd="@+id/change_password_message"
        android:layout_below="@+id/change_password_email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/new_password"
        android:layout_below="@+id/old_password"
        android:hint="@string/new_password_hint"
        android:gravity="center"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_alignRight="@+id/change_password_message"
        android:layout_alignEnd="@+id/change_password_message"
        android:layout_alignLeft="@+id/change_password_message"
        android:layout_alignStart="@+id/change_password_message"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submit_change_password_button"
        android:layout_below="@+id/new_password"
        android:textColor="@color/wordColorRed"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

</RelativeLayout>
