<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mult_603.seniordesignprojectcordiusmotus.LoginActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/heart_logo_launcher"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/warning_message"
        android:textSize="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/wordColorRed"
        android:maxLength="40"
        android:imeOptions="actionNext"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15sp"

        />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:singleLine="true"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColorHint="@color/wordColorRed"
        android:imeOptions="actionDone"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15sp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50sp"
        android:textColor="@color/wordColorRed" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/forgot_password"
        android:textColor="@color/wordColorRed"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15sp"
        android:background="@color/whitePrimary"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member"
        android:textColor="@color/wordColorRed"
        android:background="@color/whitePrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


</LinearLayout>
