<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mult_603.seniordesignprojectcordiusmotus.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password_text_view"
        android:textSize="32dp"
        android:textColor="@color/wordColorRed"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_message"
        android:id="@+id/forgot_password_message_text_view"
        android:textSize="18dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:id="@+id/email_forgot_password"
        android:textColorHint="@color/wordColorRed"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:id="@+id/password_reset_button"
        android:textColor="@color/wordColorRed"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/forgot_password_back_button"
        android:textColor="@color/wordColorRed"
        android:layout_marginTop="16dp"
        android:background="@color/whitePrimary"/>

</LinearLayout>
