<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mult_603.seniordesignprojectcordiusmotus.ForgotPasswordActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:id="@+id/change_email_text_view"
        android:textSize="32dp"
        android:textColor="@color/wordColorRed"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:layout_below="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_email_message"
        android:id="@+id/change_email_message_text_view"
        android:textSize="18dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:id="@+id/change_email_edit_text"
        android:textColorHint="@color/wordColorRed"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:id="@+id/change_email_reset_button"
        android:textColor="@color/wordColorRed"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/change_email_back_button"
        android:textColor="@color/wordColorRed"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/whitePrimary"/>
    </LinearLayout>
</RelativeLayout>
